// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconButton should be rendered with only required props 1`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      account_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 1`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      motif_ui
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 2`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      accessibility
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 3`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      accessible
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 4`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      accessible_forward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 5`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      account_balance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 6`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      account_balance_wallet
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 7`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      account_balance_wallet_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 8`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      account_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 9`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 10`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      add_box
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 11`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      add_box_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 12`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      add_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 13`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      add_circle_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 14`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      alarm
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 15`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      alarm_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 16`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      alternate_email
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 17`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      apartment
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 18`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_back
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 19`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_back_ios_new
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 20`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_downward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 21`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_drop_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 22`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_drop_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 23`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_forward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 24`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_forward_ios
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 25`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_insert
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 26`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_left_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 27`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_right_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 28`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      arrow_upward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 29`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      article
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 30`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      assignment
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 31`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      assignment_ind
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 32`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      assist_walker
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 33`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      attach_file
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 34`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      autorenew
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 35`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      backspace
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 36`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      backup
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 37`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      balance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 38`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      bar_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 39`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      blind
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 40`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      block
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 41`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      bookmark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 42`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      bookmark_manager
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 43`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      bookmark_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 44`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      border_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 45`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cached
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 46`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      calendar_month
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 47`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      calendar_today
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 48`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      call
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 49`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      call_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 50`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cancel
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 51`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cancel_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 52`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cardiology
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 53`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cases
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 54`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      chat
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 55`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      chat_bubble
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 56`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      check
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 57`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      check_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 58`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      check_circle_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 59`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      checklist
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 60`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      chevron_left
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 61`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      chevron_right
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 62`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      chips
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 63`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      close
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 64`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cloud_done
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 65`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      cloud_download
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 66`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      collapse_content
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 67`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      collections_bookmark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 68`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      compare_arrows
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 69`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      contact_page
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 70`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      contact_support
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 71`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      content_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 72`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      content_cut
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 73`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      content_paste
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 74`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      contract
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 75`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      contract_edit
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 76`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      copy_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 77`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      create_new_folder
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 78`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      credit_card
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 79`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      crop_free
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 80`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      dashboard
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 81`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      delete
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 82`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      delete_forever
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 83`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      delete_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 84`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      density_medium
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 85`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      description
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 86`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      device_hub
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 87`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      device_reset
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 88`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      devices
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 89`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      dictionary
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 90`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      directions_car
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 91`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      diversity_3
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 92`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      do_not_disturb_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 93`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      domain
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 94`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      done_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 95`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      download
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 96`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      download_2
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 97`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      downloading
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 98`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      draft
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 99`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      drive_folder_upload
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 100`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      edit_document
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 101`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      emoji_flags
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 102`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      emoji_flags_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 103`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      encrypted
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 104`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      error
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 105`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      error_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 106`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      event
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 107`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      event_available
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 108`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      event_busy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 109`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      expand_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 110`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      expand_content
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 111`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      extension
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 112`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      external
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 113`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      fact_check
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 114`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      factory
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 115`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      favorite
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 116`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      feature_search
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 117`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      feed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 118`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      feedback
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 119`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      file_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 120`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      file_present
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 121`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 122`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 123`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter_alt_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 124`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter_list
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 125`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter_list_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 126`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      filter_none
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 127`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      finance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 128`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      fingerprint
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 129`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      flash_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 130`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 131`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 132`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder_managed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 133`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder_open
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 134`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 135`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      folder_shared
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 136`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      format_quote
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 137`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      forum
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 138`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      grade
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 139`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      group
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 140`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      group_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 141`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      groups
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 142`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      handshake
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 143`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      handyman
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 144`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      heap_snapshot_large
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 145`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      hearing
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 146`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      hearing_disabled
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 147`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      help
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 148`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      help_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 149`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      home
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 150`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      home_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 151`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      how_to_reg
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 152`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      imagesmode
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 153`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      indeterminate_check_box
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 154`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      info
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 155`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      info_i
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 156`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      info_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 157`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      insert_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 158`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      inventory
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 159`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      ios_share
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 160`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      keyboard
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 161`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      keyboard_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 162`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      keyboard_arrow_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 163`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      keyboard_arrow_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 164`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      keyboard_voice
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 165`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      label
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 166`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      label_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 167`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      language
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 168`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      library_books
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 169`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      link
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 170`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      link_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 171`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      list_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 172`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      lists
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 173`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      local_library
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 174`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      local_mall
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 175`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      location_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 176`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      location_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 177`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      location_on_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 178`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      lock
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 179`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      lock_open
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 180`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      logout
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 181`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      mail
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 182`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      mail_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 183`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      map
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 184`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      mode_cool
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 185`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      mode_heat
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 186`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      more_horiz
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 187`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      more_time
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 188`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      more_vert
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 189`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      moving
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 190`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      nature
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 191`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      near_me
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 192`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      nest_eco_leaf
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 193`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      note
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 194`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      note_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 195`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      notifications
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 196`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      notifications_active
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 197`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      notifications_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 198`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      palette
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 199`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      passkey
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 200`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      payments
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 201`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      person
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 202`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      person_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 203`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      phone_iphone
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 204`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      photo
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 205`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      photo_camera
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 206`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      photo_camera_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 207`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      picture_as_pdf
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 208`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      pie_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 209`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      plagiarism
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 210`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      podcasts
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 211`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      priority_high
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 212`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      privacy_tip
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 213`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      prompt_suggestion
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 214`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      psychiatry
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 215`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      push_pin
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 216`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      push_pin_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 217`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      question_mark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 218`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      receipt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 219`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      receipt_long
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 220`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 221`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      reply
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 222`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      schedule
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 223`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      schedule_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 224`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      school
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 225`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      search
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 226`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      send
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 227`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      send_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 228`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      sentiment_dissatisfied
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 229`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      sentiment_satisfied
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 230`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      settings
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 231`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      settings_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 232`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      share
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 233`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      shield
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 234`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      shield_lock
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 235`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      signpost
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 236`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      sim_card
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 237`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      sim_card_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 238`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      speed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 239`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      stethoscope
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 240`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      store
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 241`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      supervisor_account
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 242`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      table_rows
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 243`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      task
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 244`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      task_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 245`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      thumb_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 246`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 247`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      topic
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 248`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      touch_app
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 249`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      trophy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 250`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      undo
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 251`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      upload
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 252`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      upload_2
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 253`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      upload_file
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 254`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      verified_user
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 255`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      videocam
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 256`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      videocam_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 257`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      visibility
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 258`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      visibility_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 259`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      volume_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 260`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      volume_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 261`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      volunteer_activism
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 262`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      vpn_key
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 263`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      vpn_key_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 264`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      warning
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 265`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      warning_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 266`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      water_drop
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 267`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      waves
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 268`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      wb_sunny
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 269`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      work
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 270`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      work_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 271`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      zoom_in
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 272`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
      lang="en"
      translate="no"
    >
      zoom_out
    </span>
  </button>
</div>
`;
